2007-09-04  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/CodeGenerationPanel.cs, Compiler/GNUCompiler.cs: Change newlines into
	  spaces from ExtraCompiler/LinkerArgs right before compilation so the
	  newline and spaces are conserved when serializing the project.

2007-09-03  Michael Hutchinson <m.j.hutchinson@gmail.com> 

	* Gui/OutputOptionsPanel.cs, Gui/CodeGenerationPanel.cs,
	  Gui/CompilerPanel.cs, Parser/TagDatabaseManager.cs: Adapt to new api
	  changes.

2007-09-01  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/CompilerPanel.cs, Project/CProject.cs: Allow changing the project's
	  language from C to C++ and vice versa by changing the compiler in the
	  compiler panel.

2007-09-01  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Compiler/GNUCompiler.cs: Fixed ccache implementation, though I'm still not
	  sure if ccache should be used in the linking stage (Its currently not
	  used, and I think thats correct).

2007-08-31  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/EditPackagesDialog.cs, gtk-gui/CBinding.EditPackagesDialog.cs,
	  gtk-gui/gui.stetic: Ignore case when searching for a pkg-pcackages
	  version.
	* Compiler/CCompiler.cs, Compiler/GNUCompiler.cs: No longer call bash.

2007-08-30  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* gtk-gui/CBinding.CodeGenerationPanel.cs, gtk-gui/gui.stetic: Still more
	  CodeGenerationPanel UI improving. I think it is now good enough for now.

2007-08-29  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* gtk-gui/CBinding.CodeGenerationPanel.cs, gtk-gui/gui.stetic: Improved UI,
	  could still use more improvement.

2007-08-28  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Project/CProjectConfiguration.cs: rewrote naming convetion handling.

2007-08-20  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/CompilerPanel.cs, Project/CProjectConfiguration.cs,
	  gtk-gui/CBinding.CodeGenerationPanel.cs,